2008-02-27  Benjamin Otte  <otte@gnome.org>

	* common/gmountsource.c: (g_mount_source_ask_password_finish):
	Set out parameters even in error case.

2008-02-26  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: (do_delete):
	Correct error domain in case delete failed.

2008-02-26  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Redo authentication and implement keyring support. Based
	on a patch by Carlos Garcia Campos.

2008-02-26  Alexander Larsson  <alexl@redhat.com>

        * programs/gvfs-bash-completion.sh:
        * programs/gvfs-ls.c:
	Better completion

2008-02-26  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsjobmount.c (run):
	No need to ref backend specifically now, as
	the core refs the job and the job refs the
	backend. Revert that change.

2008-02-26  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsjob.c:
        (g_vfs_job_run):
        (g_vfs_job_try):
	Ref job while calling out.
	
        * daemon/gvfsjobmount.c:
	Own ref to backend while job is alive.

2008-02-26  Carlos Garcia Campos  <carlosgc@gnome.org>

	* daemon/gvfsbackendsmb.c: (auth_callback):
	Fix parameters order in keyring lookup call.
	
2008-02-26  Yanko Kaneti  <yaneti@declera.com>

	* configure.ac: explicitly depend on libxml-2.0 
	for building the dav backend.

2008-02-26  Benjamin Otte  <otte@gnome.org>

	* common/gmountsource.c: (ask_password_reply),
	(g_mount_source_ask_password_async), (ask_question_reply),
	(g_mount_source_ask_question_async):
	make errors say "Internal Error" instead of failing

2008-02-26  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsjobmount.c: (run), (try):
	use ref/unref pair to stop backend from going away when the mount
	fails

2008-02-26  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsjobmount.c: (mount_failed):
	no g_warning for failed monts, please

2008-02-26  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsjob.c: (g_vfs_job_failed_from_error):
	* daemon/gvfsjob.h: